--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Create";
 }
 
-<div style="padding: 20pt;background: black; font-size: xx-large; margin-left: 30%; margin-top: 20px; width: 400pt; text-align: center; border-radius: 30pt;">
-    <p style="color: whitesmoke;text-decoration:none" href="/Cocktails/Create">Create your own cocktail</p>
+<div class="temp">
+    <p style="color: black ;text-decoration:none" href="/Cocktails/Create">Create your own cocktail</p>
 </div>
 <hr />
 
 @using (Html.BeginForm("Create", "Cocktails", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <div style="background: black; border-radius: 30pt; color: whitesmoke; margin-left: 45pt; padding: 25pt; padding-bottom: 300pt;">
+    <div class="temp1">
 
         <div class="bash">
-            <div class="img-containter">
+            <div class="img-container">
                 <img class="img-responsive" id="file" src="" style=" margin-top: 25pt; margin-left: 40pt;">
             </div>
 
