--- a/HangoverPartII/HangoverPartII/Views/Shared/_Layout.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
 </div>
 <div class="container body-content" >
     @RenderBody()
-    @*<body background="~/Images/background.jpg">*@
+    @*<body background="~/Images/bw_bar-wallpaper-2560x1600.jpg">*@
 
 
 </div>
