--- a/HangoverPartII/HangoverPartII/Views/Home/Index.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-    <div>
-    <img style="border-radius: 300pt; width:800px ; height: 600px; margin-left: 12%; margin-top: 5%; border: none; " src="~/Images/Logo.jpg" />
-</div>
+
+<img style="width: 700px; height: 700px; background-color: rgba(187, 172, 171, 0.6); border-radius: 900pt; margin-top: 20px" src="/Images/LOGO.png" alt="Alternate Text" />
