--- a/HangoverPartII/HangoverPartII/Content/Site.css
+++ b/HangoverPartII/HangoverPartII/Content/Site.css
@@ -18,10 +18,13 @@ body {
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
+submit,
 input,
 select,
 textarea {
     max-width: 280px;
+    color: white;
+    text-decoration: none;
 }
 
 .cocktail-body {
@@ -81,12 +84,16 @@ textarea {
 
 .previousButtonDesign {
     padding: 15px !important;
-    border-color: #3276B1 !important;
+    border-color: black !important;
+    background-color: rgba(187, 172, 171, 0.6) !important;
+    color: black;
 }
 
 .NextButtonDesign {
     padding: 15px !important;
-    border-color: #3276B1 !important;
+    border-color: black !important;
+    background-color: rgba(187, 172, 171, 0.6) !important;
+    color: black;
 }
 
 .edit-button {
@@ -148,10 +155,12 @@ textarea {
 }
 .well {
     clear: both;
+    overflow-wrap: break-word;
+    background-color: #c7a99d;
 }
 .navbar {
-    background-color: #3f4c77;
-    color: black;
+    background-color: #3a2a2a;
+    color: white;
 }
 body {
     font-family: 'Raleway', sans-serif;
@@ -169,3 +178,34 @@ body {
 .temp1 {
     background-color: rgba(187, 172, 171, 0.6); border-radius: 30pt; color: whitesmoke; margin-left: 45pt; padding: 25pt; padding-bottom: 300pt;
 }
+.comment-field {
+    width: 366px;
+    height: 70px;
+    text-align: start;
+    background-color: #c7a99d;
+    color: black;
+    overflow-wrap: break-word
+}
+input::-webkit-input-placeholder{
+    color:black !important;
+}
+.btn {
+    background-color: #3a2a2a !important;
+    border-color: white;
+    color: white !important;
+    text-decoration: none;
+}
+.single-cocktail {
+     background-color: rgba(187, 172, 171, 0.6);
+     padding-bottom: 20pt; 
+     padding-top: 10pt;
+     margin-left: 70px;
+     border-radius: 10px;
+}
+#Facebook {
+    background-color: royalblue !important;
+}
+#Google {
+    background-color: red !important;
+}
+
