--- a/HangoverPartII/HangoverPartII/Views/Comments/Create.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Comments/Create.cshtml
@@ -10,14 +10,11 @@
 
     <div class="form-horizontal">
         <div class="form-group">
-            @if (Request.IsAuthenticated)
-            {
-                @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
-            }
-            <div class="col-md-10">
+            
+            <div class="col-md-10"  style="padding-left: 0">
                 @if (Request.IsAuthenticated)
                 {
-                    @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Body, new { htmlAttributes = new { @class = "form-control comment-field", @placeholder = "Add comment" } })
                 }
                 @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
             </div>
@@ -27,7 +24,7 @@
             <div class="col-md-offset-2 col-md-10">
                 @if (Request.IsAuthenticated)
                 {
-                    <input type="submit" value="Add Comment" class="btn btn-default" />
+                    <input type="submit" value="Add Comment" class="btn btn-default" style="color: white" />
                 }
             </div>
         </div>
