--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Create.cshtml
@@ -44,7 +44,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.TextAreaFor(model => model.Body, new { htmlAttributes = new { @class = "form-control", @rows = 30, @cols = 30 } })
+                        @Html.TextAreaFor(model => model.Body, new { htmlAttributes = new { @class = "form-control text-mix", @rows = 30, @cols = 30 } })
                         @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
                     </div>
                 </div>
