Adding the deleted main project

--- a/HangoverPartII/HangoverPartII/Content/Site.css
+++ b/HangoverPartII/HangoverPartII/Content/Site.css
@@ -1,5 +1,4 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Raleway');
-body {
+﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
@@ -22,150 +21,4 @@ input,
 select,
 textarea {
     max-width: 280px;
-}
-
-.cocktail-body {
-    overflow: auto;
-    width: auto;
-    height: 50px;
-}
-
-.img-container {
-    float: left;
-    margin-right: 25px;
-}
-
-.form-horizontal {
-    float: left;
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-}
-
-.bash {
-    width: 100%;
-}
-
-#primaryButton {
-    display: none;
-}
-
-#file {
-    width: 300px;
-    height: 300px;
-}
-
-.cocktail-details {
-    display: inline-block;
-    width: 40%;
-    padding-top: 50px;
-    vertical-align: top;
-}
-
-.cocktail-picture {
-    display: inline-block;
-    vertical-align: top;
-}
-
-.previousButton {
-    margin-top: 210px;
-    border-color: #3276B1;
-}
-
-.actionButton {
-    margin-top: 210px;
-    border-color: #3276B1;
-}
-
-.previousButtonDesign {
-    padding: 15px !important;
-    border-color: #3276B1 !important;
-}
-
-.NextButtonDesign {
-    padding: 15px !important;
-    border-color: #3276B1 !important;
-}
-
-.edit-button {
-    color: white;
-    border-radius: 10px;
-    padding: 5px;
-    background-color: deepskyblue;
-    display: inline-block;
-}
-
-.delete-button {
-    border-radius: 10px;
-    padding: 5px;
-    background-color: deepskyblue;
-    display: inline-block;
-}
-
-/*.content-field {
-    resize: none;
-    border: 3px solid #f2f2f2;
-    outline: none;
-    width: 550px;
-    height: 300px;
-    border-radius: 15px;
-    text-align: left;
-    font: 12px Lato-Light;
-    padding: 10px;
-}*/
-#CocktailListLogo {
-    margin-left: 28%;
-    background: black;
-    padding: 30pt;
-    border-radius: 350pt;
-    margin-top: 15pt;
-}
-
-#CreateButton {
-    background: black;
-    font-size: xx-large;
-    margin-left: 45%;
-    margin-top: 20px;
-    width: 200px;
-    text-align: center;
-    border-radius: 30pt;
-}
-
-#CreateButtonText {
-    color: white;
-    font-size: x-large;
-    margin-left: 20%;
-}
-
-.LikeCounter {
-    font-weight: bold;
-    color: whitesmoke;
-}
-.CocktailImage {
-    border-radius: 65pt;
-}
-.well {
-    clear: both;
-}
-.navbar {
-    background-color: #3f4c77;
-    color: black;
-}
-body {
-    font-family: 'Raleway', sans-serif;
-    background-image: url(/Images/drink.jpg);
-}
-.back-container {
-    background-color: rgba(187, 172, 171, 0.6);
-}
-.comment-container {
-    background-color: rgba(187, 172, 171, 0.6);
-}
-.temp {
-    padding: 20pt; background-color: rgba(187, 172, 171, 0.6); font-size: xx-large; margin-left: 30%; margin-top: 20px; width: 400pt; text-align: center; border-radius: 30pt;
-}
-.temp1 {
-    background-color: rgba(187, 172, 171, 0.6); border-radius: 30pt; color: whitesmoke; margin-left: 45pt; padding: 25pt; padding-bottom: 300pt;
 }
