--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Index.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Index.cshtml
@@ -1,36 +1,32 @@
-﻿
-@model IEnumerable<HangoverPartII.Models.Cocktail>
+﻿@model IEnumerable<HangoverPartII.Models.Cocktail>
 
 @{
     ViewBag.Title = "Index";
 }
 
-<img class="CocktailListLogo" style="margin-left: 28%; background: black; padding: 30pt; border-radius: 350pt; margin-top: 15pt;" src="~/Images/cocktaiList.png" />
-<div style="background: black; font-size: xx-large; margin-left: 45%; margin-top: 20px; width: 200px; text-align: center; border-radius: 30pt;">
-    <a style="color: whitesmoke;text-decoration:none" href="/Cocktails/Create">Create New</a></div>
-<br />
-<br />
+<h2>Index</h2>
 
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Date)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Image)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Body)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.NetLikeCount)
+        </th>
+        <th></th>
+    </tr>
 
-@foreach (var cocktail in Model)
-{
-    <div class="col-md-3" style="background: black; padding-bottom: 20pt; padding-top: 10pt;">
-        <b style="color: white; font-size: x-large; margin-left: 20%;">@Html.DisplayFor(modelItem => cocktail.Title)</b>
-        <div>
-            <p style="font-weight: bold; color: whitesmoke;"> @Html.DisplayFor(modelItem => cocktail.NetLikeCount) Likes</p>
-            @if (Request.IsAuthenticated)
-            {
-                <p> @Html.ActionLink("Like", "Like", new { id = cocktail.Id })</p>
-            }
-        </div>
-
-        <a href="@Url.Action("Details", "Cocktails", new { id = cocktail.Id })" class="col-md-3">
-            <img style="border-radius: 65pt" src="@Url.Content(String.Format("~/Images/{0}", cocktail.Image))"
-                 width="200" height="200" />
-        </a>
-
-
-    </div>
-
-
-}
+</table>
