--- a/HangoverPartII/HangoverPartII/Views/Home/Index.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-    <div>
-    <img style="border-radius: 300pt; width:800px ; height: 600px; margin-left: 12%; margin-top: 5%; border: none; " src="~/Images/Logo.jpg" />
+
+<div class="jumbotron">
+    <h1>ASP.NET</h1>
+    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
