--- a/HangoverPartII/HangoverPartII/Views/Account/Login.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Account/Login.cshtml
@@ -4,33 +4,32 @@
     ViewBag.Title = "Log in";
 }
 
-
-<div style="background: rgba(187, 172, 171, 0.6); border-radius: 30pt; color: whitesmoke;  margin-left: 26%;padding: 30pt;margin-top: 20pt; width: 400pt;">
+<h2>@ViewBag.Title.</h2>
 <div class="row">
-    <div class="col-md-8" style="margin-left: 87pt">
+    <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h2 style="margin-left: 50pt;">Log in</h2>
-                <br />
+                <h4>Use a local account to log in.</h4>
+                <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label MYCLASS" })
+                    @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control " })
-                        @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger " })
+                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label MYCLASS" })
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control MYCLASS" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger MYCLASS" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group MYCLASS">
-                    <div class="col-md-offset-2 col-md-10 "style="margin-left: 5pt;">
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.RememberMe)
                             @Html.LabelFor(m => m.RememberMe)
@@ -38,22 +37,27 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10" style="margin-left: 0; ">
-                        <input type="submit" value="Log in" class="btn btn-default" style="width: 220px;" />
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-            
+                <p>
+                    @Html.ActionLink("Register as a new user", "Register")
+                </p>
+                @* Enable this once you have account confirmation enabled for password reset functionality
+                    <p>
+                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                    </p>*@
             }
         </section>
     </div>
-    <div >
-        <div style="margin-top: 35%; margin-left: 78pt;">
+    <div class="col-md-4">
+        <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </div>
+        </section>
     </div>
 </div>
-    </div>
 
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
