--- a/HangoverPartII/HangoverPartII/Views/Account/Register.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Account/Register.cshtml
@@ -1,65 +1,52 @@
 ﻿@model HangoverPartII.Models.RegisterViewModel
+@{
+    ViewBag.Title = "Register";
+}
 
+<h2>@ViewBag.Title.</h2>
 
-<h2>@ViewBag.Title</h2>
-<div class="col-md-3"></div>
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
-
-    <div style="background: rgba(187, 172, 171, 0.6); border-radius: 30pt; color: whitesmoke; margin-left: 45pt; padding: 25pt;">
-        @Html.AntiForgeryToken()
-        <h3 style="margin-left: 100pt;">Sign up</h3>
-        <br/> 
-               <div class="form-group">
-            @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div style="margin-left: 10pt;">
-                    @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-                </div>
-                @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-
-            </div>
+    @Html.AntiForgeryToken()
+    <h4>Create a new account.</h4>
+    <hr />
+    <div class="form-group">
+        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div style="margin-left: 10pt;">
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                </div>
-                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div style="margin-left: 10pt;">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                </div>
-                @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div style="margin-left: 10pt;">
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                </div>
-                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
         </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.FullName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                <div style="margin-left: 10pt;">
-
-                    @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
-                </div>
-            </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.FullName, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.FullName, new { @class = "form-control" })
         </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-default" value="Register" />
-            </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
 }
