--- a/HangoverPartII/HangoverPartII/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,7 +1,8 @@
 ﻿@model HangoverPartII.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-
+<h4>Use another service to log in.</h4>
+<hr />
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
     if (loginProviders.Count() == 0) {
@@ -15,12 +16,12 @@
     else {
         using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
             @Html.AntiForgeryToken()
-            <div>
-                <div>
+            <div id="socialLoginList">
+                <p>
                     @foreach (AuthenticationDescription p in loginProviders) {
                         <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
                     }
-                </div>
+                </p>
             </div>
         }
     }
