--- a/HangoverPartII/HangoverPartII/Views/Cocktails/Delete.cshtml
+++ b/HangoverPartII/HangoverPartII/Views/Cocktails/Delete.cshtml
@@ -6,8 +6,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this cocktail?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
+    <h4>Cocktail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
