pushed final version forreal

--- a/HangoverPartII/HangoverPartII/Content/Site.css
+++ b/HangoverPartII/HangoverPartII/Content/Site.css
@@ -23,7 +23,7 @@ input,
 select,
 textarea {
     max-width: 280px;
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
@@ -210,6 +210,7 @@ input::-webkit-input-placeholder{
     background-color: red !important;
 }
 .text-mix {
-    color: black !important;
+ 
+    color: black !important ;
 }
 
